<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.SecondFragment">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        android:weightSum="1">

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/enable_persistent_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/persistent_settings_auto_save" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/set_sms_status_read"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/set_sms_status_to_read" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/set_sms_status_seen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/set_sms_status_to_seen" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/set_sms_status_delivered"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/set_sms_status_to_delivered" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/set_reply_path_available"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/enable_replies_reply_path_preset" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="#F0F0F0" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/enable_status_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/enable_status_settings" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/enable_sim_slot_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/enable_sim_slot_settings" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/enable_imsi_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/enable_imsi_settings" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/enable_service_center_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/enable_service_center_settings" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/enable_time_difference_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/enable_time_difference_settings" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="#F0F0F0" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/status_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="2dp"
                android:fontFamily="@font/montserratm"
                android:text="@string/status_hint_sent"
                android:textColor="#808080"
                android:textSize="11sp" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/select_sms_status_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/status_entries"
                android:minHeight="48dp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/sim_slot_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="2dp"
                android:fontFamily="@font/montserratm"
                android:text="@string/sim_slot_guide"
                android:textColor="#808080"
                android:textSize="11sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/sim_text_input_layout"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/select_sim_slot"
                app:counterEnabled="true"
                app:counterMaxLength="1"
                app:hintEnabled="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/select_sim_slot_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:maxLength="1"
                    android:text="@string/_0" />

            </com.google.android.material.textfield.TextInputLayout>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/imsi_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="2dp"
                android:fontFamily="@font/montserratm"
                android:text="@string/default_is_auto_generated"
                android:textColor="#808080"
                android:textSize="11sp" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_sim_imsi"
                app:counterEnabled="true"
                app:counterMaxLength="13"
                app:hintEnabled="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/imsi_text_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:maxLength="13" />

            </com.google.android.material.textfield.TextInputLayout>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/service_center_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="2dp"
                android:fontFamily="@font/montserratm"
                android:text="@string/default_is_auto_generated"
                android:textColor="#808080"
                android:textSize="11sp" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_service_center_number"
                app:counterEnabled="true"
                app:counterMaxLength="13"
                app:hintEnabled="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/service_center_text_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:maxLength="13" />

            </com.google.android.material.textfield.TextInputLayout>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/time_diff_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="2dp"
                android:fontFamily="@font/montserratm"
                android:text="@string/time_diff_hint"
                android:textColor="#808080"
                android:textSize="11sp" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_time_difference"
                app:counterEnabled="true"
                app:counterMaxLength="4"
                app:hintEnabled="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/time_diff_text_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:maxLength="4"
                    android:text="@string/_0" />

            </com.google.android.material.textfield.TextInputLayout>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.core.widget.NestedScrollView>